--- a/brafe-1-puro/css/style.css
+++ b/brafe-1-puro/css/style.css
@@ -1,3 +1,5 @@
+/* Breakpoints: 960px 740px */
+
 /* Reset */
 
 body, h1 , h2, h3, p, ul {
@@ -55,6 +57,22 @@ a.menu-logo {
     font-size: 1.125em;
 }
 
+@media only screen and (max-width: 739px) {
+    .menu {
+        text-align: center;
+    }
+
+    a.menu-logo {
+        float: none;
+        margin: 0 auto;
+    }
+
+    .menu-nav {
+        float: none;
+        clear: both;
+    }
+}
+
 /* Intro */
 
 .intro {
@@ -82,6 +100,12 @@ a.menu-logo {
 .intro p {
     font-style: italic;
     font-size: 1.125em;
+}
+
+@media only screen and (max-width: 739px) {
+    .intro {
+        padding: 60px 0;
+    }
 }
 
 /* Sobre */
@@ -139,6 +163,27 @@ a.menu-logo {
     text-align: center;
     margin: 20px auto;
     max-width: 460px;
+}
+
+@media only screen and (min-width: 740px) and (max-width: 980px) {
+    .sobre-container {
+        max-width: 720px;
+    }
+
+    .sobre-item {
+        width: 340px;
+    }
+}
+
+@media only screen and (max-width: 739px){
+    .sobre-container {
+        max-width: 300px;
+    }
+
+    .sobre-item {
+        width: 300px;
+        margin: 0 auto;
+    }
 }
 
 /* Produtos */
@@ -216,6 +261,26 @@ a.menu-logo {
     margin: 20px auto 0 auto;
 }
 
+@media only screen and (min-width: 740px) and (max-width: 980px) {
+    .produtos-container {
+        max-width: 720px;
+    }
+
+    .produtos-item {
+        width: 220px;
+    }
+}
+
+@media only screen and (max-width: 739px){
+    .produtos-container {
+        max-width: 300px;
+    }
+
+    .produtos-item {
+        margin: 0 auto 20px auto;
+    }
+}
+
 /* Locais */
 
 .locais {
@@ -269,6 +334,26 @@ a.menu-logo {
     padding: 10px 20px;
 }
 
+@media only screen and (min-width: 740px) and (max-width: 980px) {
+    .locais {
+        max-width: 720px;
+    }
+
+    .locais-item > div, .locais-item img {
+        width: 340px;
+    }
+}
+
+@media only screen and (max-width: 739px){
+    .locais {
+        max-width: 300px;
+    }
+
+    .locais-item > div, .locais-item img {
+        width: 300px;
+        margin: 0;
+    }
+}
 /* Assine */
 
 .assine {
@@ -336,6 +421,28 @@ a.menu-logo {
     cursor: pointer;
 }
 
+
+@media only screen and (min-width: 740px) and (max-width: 980px) {
+    .assine-container {
+        max-width: 720px;
+    }
+
+    .assine-info, .assine form, .assine input {
+        width: 340px;
+    }
+}
+
+@media only screen and (max-width: 739px){
+    .assine-container {
+        max-width: 300px;
+    }
+
+    .assine-info, .assine form, .assine input {
+        width: 340px;
+        margin: 10px 0 0 0;
+    }
+}
+
 /* Footer */
 
 .footer {
@@ -365,4 +472,20 @@ a.menu-logo {
     float: right;
     display: block;
     margin: 0 10px;
+}
+
+@media only screen and (max-width: 739px){
+    .footer-container {
+        max-width: 300px;
+    }
+
+    .footer p {
+        float: none;
+        margin: 0;
+    }
+    
+    .footer img {
+        float: none;
+        margin: 10px 0;
+    }
 }
